Closed Bug 337011 Opened 20 years ago Closed 20 years ago

Coverity OOM crash [@ sftk_handleKeyObject][@ sftk_handleKeyParameterObject] Dereferencing possibly NULL "attribute"

Categories

(NSS :: Libraries, defect, P2)

3.11
All
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
3.11.2

People

(Reporter: timeless, Assigned: alvolkov.bgs)

References

()

Details

(Keywords: coverity, crash, Whiteboard: FIPS [CID 531 532])

Crash Data

Attachments

(1 file, 1 obsolete file)

Event returned_null: Function "sftk_FindAttribute" returned NULL value (checked 62 out of 65 times) [model]
Hardware: PC → All
Target Milestone: --- → 3.11.2
Priority: -- → P2
Assignee: nobody → alexei.volkov.bugs
Whiteboard: FIPS
Attached patch check for returned value. (obsolete) — Splinter Review
Attachment #222288 - Flags: review?(nelson)
Comment on attachment 222288 [details] [diff] [review] check for returned value. The bug reports two places in this file where the same error occurs. The patch only fixes one of the two. So, r-
Attachment #222288 - Flags: review?(nelson) → review-
The two errors are identical, but in different functions: sftk_handleKeyObject sftk_handleKeyParameterObject
Attachment #222288 - Attachment is obsolete: true
Attachment #222384 - Flags: review?(nelson)
Comment on attachment 222384 [details] [diff] [review] fix in two fuctions r=nelson
Attachment #222384 - Flags: review?(nelson) → review+
trunk: /cvsroot/mozilla/security/nss/lib/softoken/pkcs11.c,v <-- pkcs11.c new revision: 1.125; previous revision: 1.124 3.11 branch: /cvsroot/mozilla/security/nss/lib/softoken/pkcs11.c,v <-- pkcs11.c new revision: 1.112.2.10; previous revision: 1.112.2.9
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
CID 531 532
Whiteboard: FIPS → FIPS [CID 532 532]
Whiteboard: FIPS [CID 532 532] → FIPS [CID 531 532]
Summary: OOM crash [@ sftk_handleKeyObject][@ sftk_handleKeyParameterObject] Dereferencing possibly NULL "attribute" → Coverity OOM crash [@ sftk_handleKeyObject][@ sftk_handleKeyParameterObject] Dereferencing possibly NULL "attribute"
Crash Signature: [@ sftk_handleKeyObject] [@ sftk_handleKeyParameterObject]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: